--- a/content/data/config.json
+++ b/content/data/config.json
@@ -72,5 +72,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://veliamartellalcntara-73b37.netlify.app"
 }
