config.json: updated title in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -4,7 +4,7 @@
     "color_scheme": "light",
     "accent_color": "pink",
     "header": {
-        "title": "Ve",
+        "title": "Vel_martell",
         "has_nav": true,
         "nav_links": [
             {
